# pure-mac

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: copy-release-dmg.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/cleaner/: mod.rs  permanent.rs  trash.rs
src-tauri/src/scanner/: app_support.rs  backups.rs  browser.rs  developer.rs  dormant_apps.rs  dotfiles.rs  large_files.rs  mod.rs  node_modules.rs  system_cache.rs  util.rs
src/components/dashboard/: CategoryCard.tsx  DiskUsageChart.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/results/: DeleteBar.tsx  ResultItem.tsx  ResultList.tsx
src/components/shared/: ConfirmModal.tsx  RiskBadge.tsx  SizeLabel.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  switch.tsx  textarea.tsx
src/hooks/: useDelete.ts  useScan.ts
src/lib/: categoryOrder.ts  scanConfig.ts  tauri.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  ResultDetail.tsx  Results.tsx  Scanner.tsx  Settings.tsx
src/store/: scanStore.ts  settingsStore.ts
website/: build.sh  download.json  index.html  package.json  site.css
website/app/: layout.tsx  page.tsx
