[package]
name = "puremac"
version = "0.1.0"
description = "PureMac — reclaim disk space on macOS"
authors = ["PureMac"]
edition = "2021"

[lib]
name = "puremac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
trash = "5"
walkdir = "2"
dirs = "5"
regex = "1"
plist = "1"
chrono = "0.4"
once_cell = "1"
parking_lot = "0.12"
glob = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
libc = "0.2"
